--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="portfolio.css/style.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <h3 class="nav-icon">Ma<span class="primary-text-color">r</span>y</h3>
+            <ul>
+                <li><a href="">blogs</a></li>
+                <li><a href="">portfolio</a></li>
+                <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
