--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="portfolio.css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-icon">Ma<span class="primary-text-color">r</span>y</h3>
             <ul>
@@ -19,6 +19,16 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+        <div class="home">
+            <div class="home-text">
+                <h3 class="home-greeting">Hi, I  am</h3>
+                <h1 class="home-name">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="mary hardy">
+        </div>
     </header>
     <main>
 
