--- a/index.html
+++ b/index.html
@@ -36,6 +36,103 @@
             <p class="about-para-text">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
             </p>
+            <div class="container">
+                <div class="item">
+                    <p>Name:</p>
+                    <h4>Mary Hardy</h4>
+                </div>
+                <div class="item">
+                    <p>Email:</p>
+                    <h4>info@gmail.com</h4>
+                </div>
+                <div class="item">
+                    <p>Date of birth:</p>
+                    <h4>11 November 1987</h4>
+                </div>
+                <div class="item">
+                    <p>From:</p>
+                    <h4>Los Angeles, USA</h4>
+                </div>
+            </div>
+        </section>
+        <!-- what id do section start -->
+        <section class="what-i-do">
+            <h3 class="primary-section-style">What I do</h3>
+            <p class="about-para-text">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="JavaScript icon">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="react icon">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="nodejs icon">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="mongoDB icon">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <section class="summary">
+            <h3 class="primary-section-style">A summary of My Resume</h3>
+            <div class="summary-main-container">
+                <div class="container-left">
+                    <div class="summary-item">
+                        <h3 class="summary-item-head-text">My Education</h3>
+                        <h3 class="summary-item-degree-name">Master in Computer Engineering</h3>
+                        <h3 class="summary-item-vercity-name">Harvard University / 2015 - 2017</h3>
+                        <p class="summary-item-para">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="summary-item">
+                        <h3 class="summary-item-head-text">Master in Computer Engineering</h3>
+                        <h3 class="summary-item-vercity-name">Harvard University / 2015 - 2017</h3>
+                        <p class="summary-item-para">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="summary-item">
+                        <h3 class="summary-item-head-text">Master in Computer Engineering</h3>
+                        <h3 class="summary-item-vercity-name">Harvard University / 2015 - 2017</h3>
+                        <p class="summary-item-para">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="container-right">
+                    <div class="summary-item">
+                        <h3 class="summary-item-head-text">My Education</h3>
+                        <h3 class="summary-item-degree-name">Master in Computer Engineering</h3>
+                        <h3 class="summary-item-vercity-name">Harvard University / 2015 - 2017</h3>
+                        <p class="summary-item-para">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="summary-item">
+                        <h3 class="summary-item-head-text">Master in Computer Engineering</h3>
+                        <h3 class="summary-item-vercity-name">Harvard University / 2015 - 2017</h3>
+                        <p class="summary-item-para">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="summary-item">
+                        <h3 class="summary-item-head-text">Master in Computer Engineering</h3>
+                        <h3 class="summary-item-vercity-name">Harvard University / 2015 - 2017</h3>
+                        <p class="summary-item-para">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-primary">Download CV</button>
         </section>
     </main>
     <footer>
