--- a/index.html
+++ b/index.html
@@ -132,11 +132,25 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-primary">Download CV</button>
+            <div id="download-cv-btn">
+                <button class="btn-primary">Download CV</button>            
+            </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer-left">
+            <h3 class="primary-section-style">Lets Connect</h3>
+            <p class="">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        </div>
+        <div class="footer-right">
+            <h3 class="primary-section-style">Let’s Message me</h3>
+            <form class="form">
+                <input class="your-name" placeholder="your-name" type="text"><br>
+                <input class="your-email" placeholder="enter-your-email" type="email"><br>
+                <textarea name="" id="" cols="30" rows="10"></textarea><br>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
